# forgeboard

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
docs/: api-reference.md  architecture.md  assembly-guide.md  extending.md  getting-started.md  mcp-server.md  registry-format.md
forgeboard/: __init__.py
forgeboard/assembly/: __init__.py  collision.py  constraints.py  orchestrator.py
forgeboard/bom/: __init__.py  costing.py  export.py  generator.py
forgeboard/cli/: __init__.py  main.py
forgeboard/core/: __init__.py  cascade.py  dependency_graph.py  events.py  project.py  registry.py  types.py  validation.py
forgeboard/design/: __init__.py  analyzer.py  llm_provider.py  prompts.py  wizard.py
forgeboard/engines/: __init__.py  base.py  build123d_engine.py
forgeboard/export/: __init__.py  render.py  step_export.py  stl_export.py
forgeboard/mcp_server/: __init__.py  runner.py  server.py  tools.py
forgeboard/procure/: __init__.py  provider.py  registry.py  researcher.py
forgeboard/procure/providers/: __init__.py  aliexpress.py  digikey.py  generic_web.py  local_search.py  mcmaster.py  mouser.py
forgeboard/schemas/: registry_example.yaml
tests/unit/: test_bom.py  test_cascade.py  test_mcp_tools.py  test_procurement.py  test_types.py  test_wizard.py
